--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
+  "homepage": "https://tuo-username.github.io/182Marco/marco-m-netflix/",
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
-    "lint": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint",
-    "deploy": "gh-pages -d dist"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.2.2",
