updated homepage in pakage json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tuo-username.github.io/182Marco/marco-m-netflix/",
+  "homepage": "https://182Marco.github.io/182Marco/marco-m-netflix/",
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
