--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "terser-webpack-plugin": "^5.3.14",
     "vue": "^2.6.11",
     "vue-loader": "^17.4.2",
-    "vuex": "^2.5.0",
-    "webpack": "^5.98.0"
+    "vuex": "^2.5.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.0",
     "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.5.0",
     "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^6.3.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.0.0"
   }
 }
